--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,13 +34,13 @@ Imports:
     signal,
     grDevices,
     ggplot2,
-    clusterCrit,
-    kableExtra
+    clusterCrit
 RoxygenNote: 7.1.1
 Suggests:
     knitr,
     rmarkdown,
     testthat,
     digest,
+    kableExtra,
     dplyr
 VignetteBuilder: knitr
