--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(remove_rows_n)
 export(w_spaces)
 importFrom(Hmisc,cut2)
 importFrom(clusterCrit,intCriteria)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,left_join)
 importFrom(dplyr,select)
 importFrom(ggplot2,aes)
